fix: CodeBlock layout shift

--- a/app/_comps/code-snippet/_index.module.scss
+++ b/app/_comps/code-snippet/_index.module.scss
@@ -10,6 +10,10 @@
 }
 
 // Used by _code-box.tsx
+.codeBox {
+    margin-block: 1.5rem;
+}
+
 .dialogOverlay {
     --dialog-fade-duration: 300ms;
 
@@ -49,7 +53,6 @@
 .codeBlock {
     position: relative;
     padding: 1rch;
-    margin-block: 1.5rem;
     border: 1px solid var(--color-silver);
     border-radius: var(--radius-sm);
     outline: none;
